@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999951';
+our $VERSION='0.99999952';
 
 
 use 5.005;
