@@ -21,6 +21,13 @@
 
 2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.99999952 released.
+
+        * Re-arranged some prerequisites in Makefile.PL.
+
+
+2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.99999951 released.
 
         * Moved version ahead of Module::Metadata
